--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     gap: 30px;
     margin-top: 20px;
+    justify-content: center;
 }
 
 #create-todo-container {
@@ -63,6 +64,24 @@ body {
     background-color: rgb(211, 211, 211);
     margin-bottom: 10px;
     border-radius: 20px;
+    animation-name: unhighlighted;
+    animation-duration: 2s;
+}
+
+.todo-card:hover {
+    animation-name: highlighter;
+    animation-duration: 1s;
+    scale: 1.05;
+}
+
+@keyframes highlighter {
+    from {scale: 1}
+    to {scale: 1.05};
+}
+
+@keyframes unhighlighted {
+    from {scale: 1.05}
+    to {scale: 1};
 }
 
 .todo-header {
